creating build files for docker,fixed errors for curl requests